error no identificado

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-https://alejandro-ayala.gitbook.io/porfolio/
+<meta http-equiv="refresh" content="0;
+url=https://alejandro-ayala.gitbook.io/porfolio/" />
