--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="refresh" content="0;
-url=https://alejandro-ayala.gitbook.io/porfolio/" />
+url=https://alejandro-ayala.gitbook.io/tutorial/" />
